src/SteamProject/wwwroot/css/site.css
html {
  font-size: 14px;
}

@media (min-width: 768px) {
  html {
    font-size: 16px;
  }
}

.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
}

html {
  position: relative;
  min-height: 100%;
}

body {
  margin-bottom: 60px;
  background-image: linear-gradient(to left, #171a21, #2a475e, #171a21);
}

.flex-container {
  display: flex;
  flex-wrap: wrap;
}

.scroll {
  overflow-y: auto;
  height: 200px;
  padding-right: 30px;
  display: inline-block;
  text-align: bottom;
}

